syntax = "proto3";

package orders;

option go_package = "github.com/vancelongwill/_examples/fullproto/orders";

enum OrderState {
  UNKNOWN = 0;
  CREATED = 1;
  SHIPPED = 2;
  CANCELLED = 3;
}

// Might not be safe based on nil event data.
message EventData {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
}

message OrderSnapshot {
  // EventData ed = 1;
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string name = 4;
  string first_name = 5;
  string last_name = 6;
  OrderState state = 7;
}

message OrderCreated {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string by = 4;
}

message OrderCancelled {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string cancel_reason = 4;
}

message OrderAudited {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
}

message OrderNameChanged {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string first_name = 4;
  string last_name = 5;
}

message event_container {
  int32             type = 1;
  OrderCreated      order_created = 2;
  OrderCancelled    order_cancelled = 3;
  OrderAudited      order_audited = 4;
  OrderNameChanged  order_name_changed = 5;
}